// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Store /> <Store /> Snapshots Should render error snapshot correctly 1`] = `
<div>
  We are having problems loading the store. Please check back later.
</div>
`;

exports[`<Store /> <Store /> Snapshots Should render loading snapshot correctly 1`] = `
<div>
  Loading...
</div>
`;

exports[`<Store /> <Store /> Snapshots Should render snapshot correctly 1`] = `
Array [
  <div
    className="sc-bdfBwQ bvTWIO"
    data-testid="store-product-card"
  >
    <img
      alt="Russell Hobbs Pennine Illuminating S Steel Kettle 20444"
      src="https://media.4rgos.it/s/Argos/9805244_R_SET?w=110&h=130"
    />
    <p>
      Russell Hobbs Pennine Illuminating S Steel Kettle 20444
      , £
      24.99
    </p>
    <button
      className="sc-gsTCUz fSmUuA"
      onClick={[Function]}
    >
      Add to basket
    </button>
  </div>,
  <div
    className="sc-bdfBwQ bvTWIO"
    data-testid="store-product-card"
  >
    <img
      alt="Challenge White Desk Fan - 12 Inch"
      src="https://media.4rgos.it/s/Argos/4251824_R_SET?w=110&h=130"
    />
    <p>
      Challenge White Desk Fan - 12 Inch
      , £
      14.99
    </p>
    <button
      className="sc-gsTCUz fSmUuA"
      onClick={[Function]}
    >
      Add to basket
    </button>
  </div>,
  <div
    className="sc-bdfBwQ bvTWIO"
    data-testid="store-product-card"
  >
    <img
      alt="Plain Vest Top 12 BLACK"
      src="https://media.4rgos.it/s/Argos/tuc132404445_R_SET?w=110&h=130"
    />
    <p>
      Plain Vest Top 12 BLACK
      , £
      16
    </p>
    <button
      className="sc-gsTCUz fSmUuA"
      onClick={[Function]}
    >
      Add to basket
    </button>
  </div>,
  <div
    className="sc-bdfBwQ bvTWIO"
    data-testid="store-product-card"
  >
    <img
      alt="Wilson Roger Federer 27 Inch Adult Tennis Racket"
      src="https://media.4rgos.it/s/Argos/4049641_R_SET?w=110&h=130"
    />
    <p>
      Wilson Roger Federer 27 Inch Adult Tennis Racket
      , £
      24.99
    </p>
    <button
      className="sc-gsTCUz fSmUuA"
      onClick={[Function]}
    >
      Add to basket
    </button>
  </div>,
  <div
    className="sc-bdfBwQ bvTWIO"
    data-testid="store-product-card"
  >
    <img
      alt="My Little Pony Cutie Mark Rainbow Dash"
      src="https://media.4rgos.it/s/Argos/5399235_R_SET?w=110&h=130"
    />
    <p>
      My Little Pony Cutie Mark Rainbow Dash
      , £
      24.99
    </p>
    <button
      className="sc-gsTCUz fSmUuA"
      onClick={[Function]}
    >
      Add to basket
    </button>
  </div>,
  <div
    className="sc-bdfBwQ bvTWIO"
    data-testid="store-product-card"
  >
    <img
      alt="Sim Free iPhone X 256GB Mobile Phone- Space Grey"
      src="https://media.4rgos.it/s/Argos/7543412_R_SET?w=110&h=130"
    />
    <p>
      Sim Free iPhone X 256GB Mobile Phone- Space Grey
      , £
      1109
    </p>
    <button
      className="sc-gsTCUz fSmUuA"
      onClick={[Function]}
    >
      Add to basket
    </button>
  </div>,
  <div
    className="sc-bdfBwQ bvTWIO"
    data-testid="store-product-card"
  >
    <img
      alt="Assassin's Creed Origins PS4 Game"
      src="https://media.4rgos.it/s/Argos/7067462_R_SET?w=110&h=130"
    />
    <p>
      Assassin's Creed Origins PS4 Game
      , £
      30.99
    </p>
    <button
      className="sc-gsTCUz fSmUuA"
      onClick={[Function]}
    >
      Add to basket
    </button>
  </div>,
  <div
    className="sc-bdfBwQ bvTWIO"
    data-testid="store-product-card"
  >
    <img
      alt="Duracell Supreme 750 mAh Rechargeable AAA Batteries - 4 Pack"
      src="https://media.4rgos.it/s/Argos/7426735_R_SET?w=110&h=130"
    />
    <p>
      Duracell Supreme 750 mAh Rechargeable AAA Batteries - 4 Pack
      , £
      8.99
    </p>
    <button
      className="sc-gsTCUz fSmUuA"
      onClick={[Function]}
    >
      Add to basket
    </button>
  </div>,
]
`;
